--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
       </div>
     </section>
     <section>
+        <div class="feature">
+            
+        </div>
+    </section>
+    <section>
         <div class="logo">
             <img src="images/Logo.png" alt="">
         </div>
